--- a/acary_bremond_dubois_csma2017.tex
+++ b/acary_bremond_dubois_csma2017.tex
@@ -30,11 +30,15 @@ $^2$ LMGC, Université de Montpellier, frederic.dubois@umontpellier.fr \\
 \def\tone{{\hbox{\tiny{T}}}_{\hbox{\tiny{1}}}}
 \def\ttwo{{\hbox{\tiny{T}}}_{\hbox{\tiny{2}}}}
 
+\def\nat{{\hbox{\sf \tiny{nat}}}}
+\def\ac{{\hbox{\tiny{ac}}}}
+\def\mjtwo{{\hbox{\tiny{mj}}}}
 \usepackage{tikz}
 \usepackage{xkeyval,tkz-base}
 \usetikzlibrary{arrows}
 \usetikzlibrary{calc}
-
+\usepackage{mathtools}
+\usepackage{subfig,float}
 % ----------------------------------------------------------------------
 \begin{document}
 % ----------------------------------------------------------------------
@@ -42,21 +46,21 @@ $^2$ LMGC, Université de Montpellier, frederic.dubois@umontpellier.fr \\
 % ----------------------------------------------------------------------
 
 \begin{abstract}
-Dans cette contribution, on se propose d'évaluer la performance des méthodes de Newton non--lisses dans le contexte des systèmes multi--corps flexibles (mécanismes, milieux granulaires ou milieux divisés) avec contact et frottement. Les méthodes itératives de type projection/relaxation (Jacobi ou Gauss--Seidel projeté) sont généralement utilisées pour leur propriétés de robustesse et de régularisation des systèmes fortement hyper--statiques. On montre que dans le cas des systèmes déformables, les méthodes de Newton permettent d'atteindre de grandes précisions a un coût beaucoup plus faible.
+Dans cette contribution, on se propose d'évaluer la performance des méthodes de Newton non--lisses dans le contexte des systèmes multi--corps flexibles (mécanismes, milieux granulaires ou milieux divisés) avec contact et frottement. Les méthodes itératives de type projection (Jacobi ou Gauss--Seidel projeté) sont généralement utilisées pour leur propriétés de robustesse et de régularisation des systèmes fortement hyper--statiques. On montre que dans le cas des systèmes déformables, les méthodes de Newton permettent d'atteindre de grandes précisions a un coût beaucoup plus faible.
 
 \keywords contact unilatéral, frottement de Coulomb, méthodes Newton non--lisses.
 \end{abstract}
 
 \section{Introduction}
 
-Dans le contexte des systèmes multi--corps avec contact et frottement de Coulomb, le problème de contact frottant discret que l'on obtient a chaque pas de temps après une discrétisation temporelle, ou a chaque pas de chargement en quasi--statique, est généralement résolu par des méthodes itératives de type projection/relaxation (Jacobi ou Gauss--Seidel projeté). 
+Dans le contexte des systèmes multi--corps avec contact et frottement de Coulomb, le problème de contact frottant discret que l'on obtient a chaque pas de temps après une discrétisation temporelle, ou a chaque pas de chargement en quasi--statique, est généralement résolu par des méthodes itératives de type projection (Jacobi ou Gauss--Seidel projeté). 
 %
 Pour les systèmes de corps rigides, qui sont pour la plupart fortement hyperstatique du fait d'un grand nombre de contacts en regard du nombre de degrés de liberté, les méthodes itératives jouissent de bonnes propriétés de robustesse. Elles permettent de converger de façon sure, mais lentement vers une solution du problème mais si les forces de réaction ne sont pas définies de manière unique. Il est connu que ces méthodes de Newton non--lisses sont totalement inopérantes pour les systèmes rigides hyperstatiques~\cite{bertailsdescoubes:inria-00557706, ??}.
 
 
 Dans le cas de système de corps flexibles, discrétisés par exemple par des éléments finis, il est facile de réduire ce degré d'hyperstaticité en augmentant le nombre de degrés de liberté du système de façon à éviter les contraintes dépendantes au contact. Ceci peut par exemple se faire en raffinant les maillages a contact tout en contrôlant le nombre de point de contact générés.
 %
-Dans cette contribution, on montrer qu'il devient alors intéressant d'utiliser des méthodes de Newton non lisses pour résoudre le problème discret surtout si on veut atteindre des niveaux de précision relative supérieurs à $10^{-4}$.  Alors que les méthodes itératives de type projection/relaxation continuent à converger lentement, les méthodes de Newton retrouvent leurs convergences quadratiques locales pour des systèmes fortement réguliers. Cela permet d'atteindre des niveaux de précisions arbitraires pour un coût de calcul bien moindres. Dans ce travail, on essaye aussi de montrer qu'il peut être intéressant d'introduire \marginpar{voir si on peut le faire} un modèle de comportement élastique dans un système rigide afin de profiter des avantages d'un point de vue numériques des méthodes de Newton. Dans des travaux antérieurs, M. Jean~\cite{Jean1999,Acary.Jean98} avait montré que l'introduction de l'élasticité permettait de réduire le degré d'hyperstaticité et d'améliorer sensiblement la qualité des solutions en termes de forces de réaction. En préférant des méthodes de Newton non--lisses, on améliore aussi fortement le coût de calcul.
+Dans cette contribution, on montrer qu'il devient alors intéressant d'utiliser des méthodes de Newton non lisses pour résoudre le problème discret surtout si on veut atteindre des niveaux de précision relative supérieurs à $10^{-4}$.  Alors que les méthodes itératives de type projection continuent à converger lentement, les méthodes de Newton retrouvent leurs convergences quadratiques locales pour des systèmes fortement réguliers. Cela permet d'atteindre des niveaux de précisions arbitraires pour un coût de calcul bien moindres. Dans ce travail, on essaye aussi de montrer qu'il peut être intéressant d'introduire \marginpar{voir si on peut le faire} un modèle de comportement élastique dans un système rigide afin de profiter des avantages d'un point de vue numériques des méthodes de Newton. Dans des travaux antérieurs, M. Jean~\cite{Jean1999,Acary.Jean98} avait montré que l'introduction de l'élasticité permettait de réduire le degré d'hyperstaticité et d'améliorer sensiblement la qualité des solutions en termes de forces de réaction. En préférant des méthodes de Newton non--lisses, on améliore aussi fortement le coût de calcul.
 
 
 \paragraph{Formulation du problème}
@@ -153,7 +157,7 @@ Suite à une discrétisation des équations du mouvement ou d'équilibre, et à 
     &    K^\star \ni {\hat u} \perp r \in K,&
   \end{array}
 \end{equation}
-où $f\in RR^n$ est homogène à des efforts, $K$ est le produit cartésien de cônes pour chaque contact, 
+où $f\in \RR^n$ est homogène à des efforts, $K$ est le produit cartésien de cônes pour chaque contact, 
 \begin{equation}
   \label{eq:CC}
   K = \prod_{\alpha=1\ldots n_c} K^{\alpha}  = \prod_{\alpha=1\ldots n_c} \{r^\alpha, \|r^\alpha_\t \| \leq \mu^\alpha |r^\alpha_\n| \}
@@ -162,51 +166,142 @@ et $K^\star$ son dual. La fonction $g(u)$ est une fonction non--lisse définie p
 \begin{equation}
 g(u) = [[\mu^\alpha  \|u^\alpha_\t\| {\sf N}^\alpha]^\top, \alpha = 1\ldots n_c]^\top\label{eq:gg}. 
 \end{equation}
-La matrice $M \RR^{n \times n}$ est le plus souvent définie positive.
+La matrice $M \in \RR^{n \times n}$ est le plus souvent définie positive. Nous nous placerons dans cet article dans les conditions d'existence de solution comme elles sont données dans~\cite{Klarbring.Pang1998,Acary.ea_ZAMM2011}.
 
 
-\paragraph{Rang de la matrice $H$} Attardons nous un moment sur la matrice $H \in \RR^{n\times 3n_c} $ qui relie les efforts de contact $r$ aux efforts généralisés et de façon duale les vitesse relatives au contact aux vitesses généralisées. 
+\paragraph{Rang de la matrice $H$} Attardons nous un moment sur la matrice $H \in \RR^{n\times 3n_c} $ qui relie les efforts de contact $r$ aux efforts généralisés et de façon duale les vitesse relatives au contact aux vitesses généralisées. Si le nombre de contact est grand en rapport au nombre de degrés de liberté, disons $3 n_c > n$, la matrice $H$ ne peut pas être de rang plein par colonnes. Il en résulte une dépendance linéaire des efforts de contacts et la multiplicité des solutions. Dans le cas des systèmes de corps rigides, cette situation qui est liée a l'hyperstaticité du système est le cas générique. Pensons par exemple à la table a quatre pieds. Naturellement, cette situation peut aussi arriver dans le cas $3 n_c \leq  n$ si des contacts linéairement dépendants sont appliquées au corps. La réduction de rang de cette matrice influence fortement le comportement des méthodes numériques de résolution. 
 
-\clearpage
-\begin{itemize}
-\item Description du problème de frottement discret
-\item Problème de rang de H
-\item Objectifs du papier
-  \begin{enumerate}
-  \item Comparaison performance NSGS/NSN sur des déformables et des rigides.
-  \item Intérêt a passer en déformable pour ajouter des ddl.
-  \end{enumerate}
-\end{itemize}
+Il en est de même si on cherche a résoudre le problème réduit aux variables locales au contact:
+\begin{equation}\label{eq:soccp1-intro}
+  \begin{array}{l}
+    u = W r + q,  \\
+    \hat u = u + g(u) \\
+        K^\star \ni {\hat u} \perp r \in K,
+  \end{array}
+\end{equation}
+avec $W = H^\top M^{-1} H \in \RR^{3n_c\times 3n_c}$ la matrice de Delassus et $q\in \RR^{3n_c}$. De ce cas, c'est la matrice $W$ qui n'est plus de rang plein.
+
+% \begin{itemize}
+% \item Description du problème de frottement discret
+% \item Problème de rang de H
+% \item Objectifs du papier
+%   \begin{enumerate}
+%   \item Comparaison performance NSGS/NSN sur des déformables et des rigides.
+%   \item Intérêt a passer en déformable pour ajouter des ddl.
+%   \end{enumerate}
+% \end{itemize}
 
 \section{Méthodes numériques de résolution}
+Rappelons brièvement les caractéristiques des méthodes utilisées dans cette étude. Pour plus de détails, on pourra consulter~\cite{Acary.Brogliato2008}.
 
-\section{Profils de perfomance}
+\paragraph{Méthodes de projection de type Gauss-Seidel} La méthode de Gauss--Seidel avec projection est décrite en détail dans~\cite{Mitsopoulou.Doudoumis1987,Jourdan.Alart.ea98}. Elle consiste en une décomposition du problème contact par contact qui permet de calculer à l'itération $k$ les inconnues du contact $\alpha$ en résolvant le problème suivant 
+\begin{equation}
+  \label{eq:pgs-1}
+  \begin{array}{c}
+  u^{\alpha}_{k+1} = W^{\alpha\alpha} r^{\alpha}_{k+1} + \sum_{\beta < \alpha}W^{\alpha\beta} r^{\beta}_{k+1} + \sum_{\beta > \alpha}W^{\alpha\beta} r^{\beta}_{k} +  q^\alpha,\\[1mm] 
+  \hat u^{\alpha}_{k+1} =u^{\alpha}_{k+1} + g(u^{\alpha}_{k+1}), \\[1mm]
+   K^{\alpha,\star} \ni {\hat u^{\alpha}_{k+1}} \perp r^{\alpha}_{k+1} \in K^\alpha.
+ \end{array}
+\end{equation}
+La résolution du problème local au contact~\ref{eq:pgs-1} peut se faire de manière analytique, ou en utilisant une autre méthode numérique. Dans cet article, on utilisera localement une méthode de Newton non--lisse décrite dans la suite.
+
+\paragraph{Méthodes de Newton non--lisses} Les méthodes  de Newton non--lisses sont basées sur un réécriture du problème sous la forme d'une équation $F(r)=0$, dont les racines sont les solutions du problème original. Parmi les exemples les plus connus de ces fonctions, on peut citer la fonction de P. Alart et A. Curnier~\cite{Alart.Curnier1991}:
+\begin{equation}
+  \label{eq:AC-1}
+ F_\ac(r) \coloneqq  
+  \left[
+  \begin{array}{l} 
+    r_\n - P_{\RR^{n_c}_+}(r_\n - \rho_\n  (Wr+q)_\n) = 0, \\
+    r_\t - P_{D(\mu, (r_\n - \rho (Wr+q)_\n)_+)}(r_\t - \rho_\t (Wr+q)_\t   )=0,\quad \rho_n>0, \rho_\t>0
+  \end{array}
+  \right] =0
+\end{equation}
+avec le disque de frottement  $D(\mu,(r_{n})_+) = \prod_{\alpha=1\ldots n_c} D(\mu^{\alpha} (r_{\n}^\alpha)_+)$. Une version similaire peut aussi être utilisée est la fonction proposée par M. Jean et J.J. Moreau~\cite{Jean.Moreau1987}
+\begin{equation}
+  \label{eq:MJ-II}
+    F_{\mjtwo}(r) \coloneqq \left[ \begin{array}{c}
+    r_\n - P_{\RR^{n_c}_+}(r_\n - \rho_\n (W r +  q)_\n) \\
+    r_\t - P_{D(\mu, (r_{\n})_+)}(r_\t - \rho_\t (Wr+q)_\t   ) 
+  \end{array}\right] =0.
+\end{equation}
+ D'autres fonctions de complémentarité peuvent aussi utilisées comme la fonction naturelle:
+\begin{equation}
+  \label{eq:natural-II}
+  F_\nat(r) \coloneqq   \left[
+  \begin{array}{l} 
+    r - P_{K}\left(r  - \rho (Wr+q + g(Wr+q))\right)
+  \end{array}\right] 
+  = 0, \quad \rho >0
+\end{equation}
+où encore la fonction de Fisher-Burmeister. Partant de ces formulations sous forme de racines d'équation, le plus souvent non lisse, il convient ensuite de calculer(sélectionner) un élément régulier $\Phi$ du sous--différentiel de $F$ au point $r$, $\Phi(r) \in \partial F(r)$ et d'effectuer les itérations de Newton suivantes:
+\begin{equation}
+  \label{eq:NSN3}
+  r_{k+1}  =  r_k -  \Phi^{-1}(r_k) (F(r_k)).
+\end{equation}
+
+\paragraph{Mesure d'erreur} Afin de comparer la convergence des méthodes, nous utilisons une norme d'erreur relative unique basée sur le fonction naturelle pour les problèmes de complémentarité du second ordre:
+\begin{equation}
+   e = \displaystyle\frac{\|F_\nat(r)\|}{1+ \|q\|}
+\end{equation}
+Cette mesure d'erreur est justifiée plus amplement dans \cite{Facchinei.Pang2003}
+
+\paragraph{Profil de performance} Pour évaluer l'efficacité d'une méthode par rapport à une autre, nous utilisons les profils de performance comme ils sont proposés dans~\cite{DolanMore_MP2002}. Considérons une ensemble $\mathcal P$ de $n_p$ problèmes et $\mathcal S$  de $n_s$ méthodes de résolutions. Pour chaque problème $p\in \mathcal P$ et chaque méthode $s \in mathcal S$, on définit un critère de performance $\t_{p,s}$. Dans notre cas, il s'agira du nombre d'opérations flottantes pour atteindre une précision donnée. Nous utilisons aussi une temps de calcul maximum. Si la précision n'est pas atteinte, le critère est égal à $+\infty$. On définit le rapport de performance par:  
+\begin{equation}
+ r_{p, s} = \frac{t_{p,s}}{\text{min}\, \{t_{p,s}, \, \, s \in S\}} \, .
+\end{equation}
+Enfin on définit la probabilité  $\rho_s(\tau)$ pour une méthode $s \in S$ que le rapport de perfomance $r_{p, s}$ soit en dessous d'une valeur $\tau \in \mathbb R$ :
+\begin{equation}
+ \rho_s(\tau) = \frac{1}{n_p} \text{size} \{p \in P, \, \, r_{p, s} \leq \tau\} \geq 1.
+\end{equation}
+On peut remarquer que $\rho_s(1)$ représente la probabilité que la méthode $s$ soit la meilleure par rapport aux autres méthodes. La valeur $\rho_s(\tau)$ pour $\tau$ grand caractérise la capacité de la méthode à résoudre un grand nombre de problème en temps long. Dans la suite, on tracera les profils de performance pour une plage de $\tau$. Ce sont des courbes croissantes. 
+
+\paragraph{Logiciels et FClib}
 
 \section{Comparaison sur des solides élastiques}
 
 \subsection{La murette}
+
 \subsection{Résultats}
+% \begin{figure}
+%   \centering
+%   \includegraphics{figure/LowWall_FEM.1e-3.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}
+%   \includegraphics{figure/LowWall_FEM.1e-3.with_guess/simple/profile-LMGC_LowWall_FEM_legend.pdf}
+%   \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une précision de $10^{-3}$}
+%   \label{fig:LowWall_FEM.1e-3.simple}
+% \end{figure}
+% \begin{figure}
+%   \centering
+%   \includegraphics{figure/LowWall_FEM.1e-4.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}
+%   \includegraphics{figure/LowWall_FEM.1e-4.with_guess/simple/profile-LMGC_LowWall_FEM_legend.pdf}
+%   \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une précision de $10^{-4}$}
+%   \label{fig:LowWall_FEM.1e-4.simple}
+% \end{figure}
+% \begin{figure}
+%   \centering
+%   \includegraphics{figure/LowWall_FEM.1e-6.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}
+%   \includegraphics{figure/LowWall_FEM.1e-6.with_guess/simple/profile-LMGC_LowWall_FEM_legend.pdf}
+%   \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une précision de $10^{-6}$}
+%   \label{fig:LowWall_FEM.1e-6.simple}
+% \end{figure}
+% \begin{figure}
+%   \centering
+%   \includegraphics{figure/LowWall_FEM.1e-8.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}
+%   \includegraphics{figure/LowWall_FEM.1e-8.with_guess/simple/profile-LMGC_LowWall_FEM_legend.pdf}
+%   \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une précision de $10^{-8}$}
+%   \label{fig:LowWall_FEM.1e-8.simple}
+% \end{figure}
+
 \begin{figure}
   \centering
-  \includegraphics{figure/LowWall_FEM.1e-3.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}
-  \includegraphics{figure/LowWall_FEM.1e-3.with_guess/simple/profile-LMGC_LowWall_FEM_legend.pdf}
-  \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une précision de $10^{-3}$}
-  \label{fig:LowWall_FEM.1e-3.simple}
+   \subfloat[précision de $10^{-3}$]{\includegraphics[width=0.49\textwidth]{figure/LowWall_FEM.1e-3.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}\label{fig:LowWall_FEM.1e-3.simple}}
+   \subfloat[précision de $10^{-4}$]{\includegraphics[width=0.49\textwidth]{figure/LowWall_FEM.1e-4.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}\label{fig:LowWall_FEM.1e-4.simple}}\\
+   \subfloat[précision de $10^{-6}$]{\includegraphics[width=0.49\textwidth]{figure/LowWall_FEM.1e-6.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}\label{fig:LowWall_FEM.1e-6.simple}}
+   \subfloat[précision de $10^{-8}$]{\includegraphics[width=0.49\textwidth]{figure/LowWall_FEM.1e-8.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}\label{fig:LowWall_FEM.1e-8.simple}}
+   \includegraphics{figure/LowWall_FEM.1e-8.with_guess/simple/profile-LMGC_LowWall_FEM_legend.pdf}
+  \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour différentes précisions}
+  \label{fig:LowWall_FEM.simple}
 \end{figure}
-\begin{figure}
-  \centering
-  \includegraphics{figure/LowWall_FEM.1e-4.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}
-  \includegraphics{figure/LowWall_FEM.1e-4.with_guess/simple/profile-LMGC_LowWall_FEM_legend.pdf}
-  \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une précision de $10^{-4}$}
-  \label{fig:LowWall_FEM.1e-4.simple}
-\end{figure}
-\begin{figure}
-  \centering
-  \includegraphics{figure/LowWall_FEM.1e-6.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}
-  \includegraphics{figure/LowWall_FEM.1e-6.with_guess/simple/profile-LMGC_LowWall_FEM_legend.pdf}
-  \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une précision de $10^{-6}$}
-  \label{fig:LowWall_FEM.1e-6.simple}
-\end{figure}
+
 
 
 \begin{figure}
