--- a/biblio.bib
+++ b/biblio.bib
@@ -44,6 +44,16 @@
   adress =	 {Lisboa, Portugal},
   publisher =	 {Laborat\'orio Nacional de engenharia Civil (LNEC)}
 }
+@Book{Facchinei.Pang2003,
+  author =	 {Facchinei,F.  and Pang, J. S. },
+  title =	 {Finite-dimensional Variational Inequalities and
+                  Complementarity Problems},
+  publisher =	 {Springer Verlag NY. Inc.},
+  year =	 2003,
+  volume =	 { I \& II},
+  series =	 {Springer Series in Operations Research}
+}
+
 @Article{DeSaxce92,
   author =	 {De Saxc\'e, G.},
   title =	 {Une g\'en\'eralisation de l'in\'egalit\'e de
@@ -92,4 +102,164 @@
                   to the so-called “paradox of Painlevé”. Finally, we
                   present some implementations and experiments to
                   illustrate the practical aspect of our work.},
+}
+@article{Klarbring.Pang1998,
+  author =	 {Anders Klarbring and Jong-Shi Pang},
+  title =	 {Existence of Solutions to Discrete Semicoercive
+                  Frictional Contact Problems},
+  journal =	 {SIAM Journal on Optimization},
+  issn =	 {1052-6234},
+  pages =	 {414--442},
+  volume =	 8,
+  number =	 2,
+  year =	 1998
+}
+
+@article{Jourdan.Alart.ea98,
+  author =	 {Jourdan, F. and Alart, P. and Jean, M.},
+  title =	 {A {G}auss {S}eidel like algorithm to solve
+                  frictional contact problems},
+  journal =	 cmame,
+  pages =	 {31-47},
+  year =	 1998,
+  volume =	 155,
+  number =	 1
+}
+
+@article{Alart.Curnier1991,
+  author =	 {Alart, P. and Curnier, A.},
+  title =	 {A mixed formulation for frictional contact problems
+                  prone to \uppercase{N}ewton like solution method},
+  journal =	 cmame,
+  pages =	 {353-375},
+  year =	 1991,
+  volume =	 92,
+  number =	 3
+}
+
+@Article{Mitsopoulou.Doudoumis1987,
+  author =	 {Mitsopoulou, E.N. and Doudoumis, I.N.},
+  title =	 {A contribution to the analysis of unilateral contact
+                  problems with friction},
+  journal =	 {Solid Mechanics Archives},
+  year =	 1987,
+  volume =	 12,
+  number =	 3,
+  pages =	 {165--186}
+}
+@book{Acary.Brogliato2008,
+  author =	 "Acary, V. and Brogliato, B.",
+  title =	 "{Numerical methods for nonsmooth dynamical
+                  systems. Applications in mechanics and
+                  electronics.}",
+  language =	 "English",
+  publisher =	 "{Lecture Notes in Applied and Computational
+                  Mechanics 35. Berlin: Springer. xxi, 525~p. }",
+  year =	 2008,
+  abstract =	 "{This book concerns the numerical simulation of
+                  dynamical systems whose trajectories may be not
+                  differentiable. These systems are called nonsmooth
+                  dynamical systems, and they represent an important
+                  class of systems, firstly because of many
+                  applications in which nonsmooth models are useful,
+                  secondly because they give rise to new problems in
+                  various fields of mathematics and computational
+                  mechanics.  The book is divided into three parts.
+                  The first part presents the formulation of nonsmooth
+                  dynamical systems, with model problems from
+                  mechanics, electricity and control, as well as
+                  useful material from convex and nonsmooth analysis
+                  related to differential inclusions, variational
+                  inequalities, and complementarity systems. The model
+                  applications are taken from multibody systems with
+                  contact, impact and friction, and from electrical
+                  circuits with piecewise linear and ideal components.
+                  The second part deals with numerical
+                  time-integration schemes, which can be divided into
+                  event-driven schemes and time-stepping schemes.  The
+                  third part is devoted to one-step nonsmooth problem
+                  solvers, and includes techniques suitable for the
+                  solution of variational inequalities, nonlinear
+                  programming problems and complementarity
+                  problems. The one-step problems include the
+                  nonlinear models known as holonomic models, which
+                  have a long tradition in engineering mechanics (cf.
+                  unilateral contact for static elastic bodies, the
+                  holonomic or Hencky model of plasticity). Nonsmooth
+                  modelling in mechanics is based on the seminal works
+                  of J. J. Moreau and T. Rockafellar on convex
+                  analysis and its usage in contact mechanics and
+                  elastoplasticity, as well as on later extensions to
+                  nonconvex problems by P. D. Panagiotopoulos. This
+                  development has been documented in a number of
+                  research monographs like [{\it R. T. Rockafellar},
+                  Convex Analysis. Princeton Landmarks in
+                  Mathematics. Princeton, NJ: Princeton University
+                  Press (1997; Zbl 0932.90001); {\it P. D.
+                  Panagiotopoulos}, Inequality problems in mechanics
+                  and applications. Convex and nonconvex energy
+                  functions. Boston-Basel-Stuttgart: Birkh\"{a}user
+                  (1985; Zbl 0579.73014); {\it J. J. Moreau,
+                  P. D. Panagiotopoulos}, Nonsmooth mechanics and
+                  applications. CISM Courses and Lectures, 302. Wien
+                  etc.: Springer-Verlag (1988; Zbl 0652.00016)] and in
+                  many others.  Practical applications of nonsmooth
+                  mechanics are also presented in research monographs,
+                  see e.g. [{\it F. Pfeiffer, C. Glocker}, Multibody
+                  dynamics with unilateral contacts. CISM Courses and
+                  Lectures. 421. Wien etc.: Springer-Verlag (2000; Zbl
+                  0960.00025)].  The present book is a research
+                  monograph with numerous information and references
+                  to original publications which gives to the book an
+                  encyclopaedic nature. The wealth of information and
+                  solution methods mentioned in this book certainly
+                  shows that the area of nonsmooth mechanics has
+                  arrived a level of maturity that allows for serious
+                  industrial applications, without loosing its
+                  attractiveness for research purposes. The parallel
+                  presentation of nonsmooth models in mechanics and
+                  electronics indicates that the mentioned effects
+                  will also be of interest for people working in
+                  mechatronics, microelectromechanics and
+                  multiphysics.  The book is intended for graduate
+                  students and scientists doing research and
+                  development in mechanics and electrical engineering,
+                  designers of modern electromechanical devices, as
+                  well as to researchers from other scientific
+                  communities like applied mathematics, robotics,
+                  civil and mechanical engineering, mechatronics,
+                  virtual reality, etc.}",
+  reviewer =	 "{Georgios E. Stavroulakis (Chania)}",
+  keywords =	 "{unilateral contact; complementarity problems;
+                  mathematical programming; event-driven schemes;
+                  time-stepping schemes}",
+  classmath =	 "{*74-02 (Research monographs (mechanics of
+                  deformable solids)) 49-02 (Research monographs
+                  (calculus of variations)) 74M15 (Contact) 49J40
+                  (Variational methods including variational
+                  inequalities) 65Kxx (Numerical methods in
+                  mathematical programming and optimization) 74Sxx
+                  (Numerical methods in solid mechanics) }",
+}
+@incollection{Jean.Moreau1987,
+  author =	 {Jean, M. and Moreau, {{J.J.}}},
+  editor =	 {Del Pietro, G. and Maceri, F.},
+  title =	 {Dynamics in the presence of unilateral contacts and
+                  dry friction: a numerical approach},
+  booktitle =	 {Unilateral problems in structural analysis. II},
+  year =	 1987,
+  pages =	 {151--196},
+  publisher =	 {CISM 304, Spinger Verlag},
+  adress =	 {Wien}
+}
+
+@article{DolanMore_MP2002,
+  title={Benchmarking optimization software with performance profiles},
+  author={Dolan, E.D. and Mor{\'e}, J.J.},
+  journal={Mathematical Programming},
+  volume={91},
+  number={2},
+  pages={201--213},
+  year={2002},
+  publisher={Springer}
 }
